[package]
name = "advent"
version = "0.1.0"
authors = ["Robin <midouesterner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.15"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.0"
lazy_static = "1.4"
enumset = "1.0"
petgraph = "0.5"
